<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--
    Aplicação Principal
    -->
    <string name="app_name">Clik Show</string>


    <!--
    Layout SplashScreen
    -->

    <string name="buttonSplashLogin">Entrar</string>
    <string name="buttonSplashNewAccount">Nova Conta</string>
    <string name="buttonSplashLoginClikSocial">Logar com o ClikSocial</string>

    <!-- Layout Login -->

    <string name="titleActionBarLogin">Entrar</string>
    <string name="editTextLogin">Email ou CPF</string>
    <string name="editTextPasswordLogin">Senha</string>
    <string name="textViewQuestionRecoveryPassLogin">Esqueceu sua senha?</string>
    <string name="buttonTextViewRecoveryPassLogin">Recupere aqui</string>
    <string name="buttonLogin">Entrar</string>
    <string name="textViewQuestioNewAccountLogin">Não tem conta ainda?</string>
    <string name="buttontextViewNewAccountLogin">Nova conta</string>
    <string name="hintLoginEmpty">Informe seu email ou CPF</string>
    <string name="hintPasswordEmpty">Informe sua senha</string>
    <string name="hintPasswordNotLength">Senha muito curta</string>
    <string name="textCredentialsInvalid">Crendenciais de acesso inválidas</string>


    <!--Layout New Profile-->
    <string name="name_title_new_profile">Nova Conta</string>

    <!-- cpf strings -->
    <string name="label_cpf_new_profile">CPF</string>
    <string name="cpf_checking">Analisando CPF...</string>
    <string name="cpf_valid">CPF válido</string>
    <string name="cpf_invalid">CPF inválido</string>
    <string name="cpf_already_used">CPF já cadastrado</string>


    <!-- layout goes on -->
    <string name="label_genrer">Gênero</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="label_only_one_sex">Escolha apenas um gênero</string>
    <string name="label_full_name_new_profile">Nome completo</string>
    <string name="label_username_new_profile">Usuário</string>
    <string name="label_email_new_profile">Email</string>
    <string name="label_password_new_profile">Senha</string>
    <string name="label_conf_password_new_profile">Confirmar senha</string>
    <string name="label_btn_new_profile">Criar nova conta</string>
    <string name="question_new_profile">Já tem conta?</string>
    <string name="label_btn_login_new_profile">Entrar</string>

    <!--Layout Recovery Password-->
    <string name="recover_pass_title">Recuperar senha</string>
    <string name="text_recover">Digite seu e-mail cadastrado para receber um e-mail de redefinição de senha.</string>
    <string name="email_hint">e-mail</string>
    <string name="btn_send">Enviar</string>


    <!--CPF error layout-->
    <string name="text_CPF">Caso seja proprietário do CPF informado e não tenha feito seu cadastro, mande um e-mail para o nosso support: contato@supportclik.com</string>
    <string name="text_CPF_invalid">Este CPF não existe, por favor, digite novamente</string>
    <string name="contato_supportclik">contato@supportclik.com</string>
    <string name="cpf_recover_pass">recuperar senha</string>
    <string name="cpf_reclame">reclame aqui</string>
    <string name="entendi_btn">entendi</string>

    <!-- Validation Telephone and SMS-->
    <string name="texte_one_cpf">Caso você seja proprietário do CPF informado e não tenha feito seu cadastro:</string>
    <string name="text_complain">Reclame aqui</string>
    <string name="text_two_cpf">Caso o CPF informado seja seu e tenha esquecido a senha:</string>


    <!-- Validation Telephone and SMS-->
    <string name="name_title_valid_telephone">Confirmar telefone</string>
    <string name="label_text_digite_phone">Digite seu telefone para receber o SMS de confirmação</string>
    <string name="hint_input_digite_phone">(00)00000-0000</string>
    <string name="name_btn_digite_phone">Solicitar SMS</string>
    <string name="label_text_valid_code_phone">Nós lhe enviamos um SMS para</string>
    <string name="name_btn_code_phone">Validar SMS</string>
    <string name="question_valid_code_phone_sms">Não recebi o SMS.</string>
    <string name="label_btn_reenviar_sms">Reenviar</string>

    <!--Principal-->
    <string name="name_title_bar_principal">Eventos</string>
    <string name="negative_button_dialog">Não</string>
    <string name="positive_button_dialog">Sim</string>
    <string name="title_portaria_bottomsheet">Portaria Clik Show</string>
    <string name="default_notification_channel_id">canal_clikShow</string>
    <string name="text_empty_commets">Comente aqui antes de enviar</string>
    <string name="text_commets">Comente aqui...</string>
    <string name="whatsapp_not">Whatsapp não instalado</string>
    <string name="text_label_cortesia">Pesquisar usuários</string>

    <string-array name="ordenado_ticket">
        <item>Ordenado por</item>
        <item>Data</item>
        <item>Local</item>
        <item>Preço</item>
    </string-array>

</resources>