<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:background="@drawable/dialog_shape">

    <ImageView
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_error_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_CPF"
        android:id="@+id/text_dialog"
        android:layout_below="@+id/a"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="30dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dialog_recuperar"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/text_dialog"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_login"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:text="@string/cpf_recover_pass"
            android:textColor="#ffffffff"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_dialog_reclamar"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/text_dialog"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_login"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:text="@string/entendi_btn"
            android:textColor="#ffffffff"
            android:textSize="12dp" />
    </LinearLayout>


</RelativeLayout>