<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_gradient_splash"
        android:layout_above="@id/toobar_splash"/>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:id="@+id/center_image"
        android:src="@drawable/ic_logo_splash"
        android:background="@android:color/transparent"/>

    <Button
        android:visibility="gone"
        android:id="@+id/button_logar_com_cliksocial"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingHorizontal="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_logar_cliksocial"
        android:text="@string/buttonSplashLoginClikSocial"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/toobar_splash"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/button_open_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:text="@string/buttonSplashLogin"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_open_novo_usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:text="@string/buttonSplashNewAccount"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:background="#65AAAAAA"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="5dp"/>

</RelativeLayout>