<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:columnCount="3"
        android:elevation="2dp"
        android:background="@color/white"
        android:rowCount="1">

        <FrameLayout
            android:id="@+id/back_button_valid_code_phone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="0">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_back_black"
                android:padding="12dp"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="1"
            android:layout_row="0"
            android:text="Confirmar SMS"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="18dp"/>

        <FrameLayout
            android:id="@+id/btn_settings_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_row="0">
        </FrameLayout>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="54dp"
        android:layout_marginHorizontal="24dp">

        <TextView
            android:id="@+id/text_code_valid_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Este número está errado?"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/wrong_number_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:text="Clique aqui"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp">

            <EditText
                android:id="@+id/code_phone_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="30dp"
                android:maxLength="1"
                android:inputType="number"
                android:textAlignment="center"
                android:background="@drawable/input"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/code_phone_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="30dp"
                android:maxLength="1"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/input"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/code_phone_tree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="30dp"
                android:maxLength="1"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/input"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/code_phone_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="30dp"
                android:maxLength="1"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/input"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_valid_code_phone"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/btn_login"
            android:text="@string/name_btn_code_phone"
            android:textColor="@color/white"
            android:layout_marginHorizontal="5dp"
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="5dp"
            android:layout_gravity="center"
            android:weightSum="2">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lottie_rawRes="@raw/animate_load"
                android:layout_marginHorizontal="10dp"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                app:tint="@color/colorAccent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reenvia_code_phone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginVertical="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:text="@string/question_valid_code_phone_sms"/>

            <TextView
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginHorizontal="5dp"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_btn_reenviar_sms"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>